--- a/learning resources/1_introduction/1_introduction.html
+++ b/learning resources/1_introduction/1_introduction.html
@@ -13,7 +13,7 @@
 <body>
     <h1 class="python-intro" > <button href="1_introduction.html" >hello Getting started with python</button></h1>
     
-    <h2 class="python-definition">What is python?? </h2>
+    <h2 class="python-definition">What is python? </h2>
     <p class="python-description">
         <i class="ri-question-answer-fill"></i> Python is a high-level, easy-to-read programming language designed for simplicity and versatility.
     </p>
