--- a/learning resources/1_introduction/1_introduction.html
+++ b/learning resources/1_introduction/1_introduction.html
@@ -11,7 +11,7 @@
 />
 </head>
 <body>
-    <h1 class="python-intro" > <button href="1_introduction.html" >hello Getting started with python</button></h1>
+    <h1 class="python-intro" > <button href="1_introduction.html" > Getting started with python</button></h1>
     
     <h2 class="python-definition">What is python? </h2>
     <p class="python-description">
