--- a/learning resources/1_introduction/1_introduction.html
+++ b/learning resources/1_introduction/1_introduction.html
@@ -10,46 +10,58 @@
     rel="stylesheet"
 />
 </head>
+
+
+
+
+
+
+
+
+
+
 <body>
-    <h1 class="python-intro" > <button href="1_introduction.html" > Getting started with python</button></h1>
-    
-
-
-    <h2 class="python-definition">What is python? </h2>
-    <p>
-        Python is a high-level, easy-to-read programming language designed for simplicity and versatility. 
-        <br>
-        Whether you're building websites, analyzing data, or automating tasks, Python’s clean syntax and powerful libraries make it perfect for beginners and pros alike.</p>
-  
+    <header class="header">
+        <h1 class="python-intro" > 
+            <button class="start-btn" href="1_introduction.html" > Getting started with python</button>
+        </h1>
+    </header>
 
 
 
 
 
+
+
+
+
+    <section class="python-def">
+        <h2 class="python-desc">What is python? </h2>
+        <p class="python-text">
+            Python is a high-level, easy-to-read programming language designed for simplicity and versatility. 
+            <br>
+            Whether you're building websites, analyzing data, or automating tasks, Python's clean syntax and powerful libraries make it perfect for beginners and pros alike.
+        </p>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+    <section class="video-sec">
         <iframe class="video-embed" width="560" height="315" src="https://www.youtube.com/embed/XIR20HH8mNY?si=4HYPNaRd-MxOJc6n"
-     title="YouTube video player" frameborder="0" 
-     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-     referrerpolicy="strict-origin-when-cross-origin"  allowfullscreen>
-    </iframe>
-
-
-
-
-
-
-
-
-<h2>
-    History of Python:
-
-</h2>
-<p>
-<strong>1991: </strong><i>Created by Guido van Rossum, Python was born to make coding fun and easy.</i>
-<br>
- <strong>2000: </strong><i>Python 2.0 added features like list comprehensions and improved memory management.</i>
-<br>
-<strong>2008: </strong> <i>Python 3.0 arrived, fixing inconsistencies and becoming the go-to version, while Python 2 retired in 2020.</i>
-</p>
+         title="YouTube video player" frameborder="0" 
+         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+         referrerpolicy="strict-origin-when-cross-origin"  allowfullscreen>
+        </iframe>
+    </section>
 
 
 
@@ -60,24 +72,44 @@
 
 
 
+    <section class="history-sec">
+        <h2 class="history-title">
+            History of Python:
+        </h2>
+        <p class="history-text">
+            <span class="year-91">1991: </span><i>Created by Guido van Rossum, Python was born to make coding fun and easy.</i>
+            <br>
+            <span class="year-00">2000: </span><i>Python 2.0 added features like list comprehensions and improved memory management.</i>
+            <br>
+            <span class="year-08">2008: </span> <i>Python 3.0 arrived, fixing inconsistencies and becoming the go-to version, while Python 2 retired in 2020.</i>
+        </p>
+    </section>
 
-<h1>Where is Python Used?</h1>
 
-   <ol>
-   <li>Web Development (Django, Flask)
-</li>
-   <li>Data Science & AI (Pandas, TensorFlow)
-</li>
-   <li>Automation/Scripting (Automate tasks, web scraping)
-</li>
-   <li>Game Development (Pygame)
-</li>
-   <li>Desktop Apps (Tkinter, PyQt)
-</li>
-   <li>Education (Top choice for teaching coding)
-</li>
 
-   </ol>
-   <h3>Python is everywhere—from web apps to machine learning!</h3>
+
+
+
+
+    <section class="usage-sec">
+        <h1 class="usage-title">Where is Python Used?</h1>
+        <ol class="usage-list">
+            <li class="usage-item">Web Development (Django, Flask)</li>
+            <li class="usage-item">Data Science & AI (Pandas, TensorFlow)</li>
+            <li class="usage-item">Automation/Scripting (Automate tasks, web scraping)</li>
+            <li class="usage-item">Game Development (Pygame)</li>
+            <li class="usage-item">Desktop Apps (Tkinter, PyQt)</li>
+            <li class="usage-item">Education (Top choice for teaching coding)</li>
+        </ol>
+        <h3 class="usage-subtitle">Python is everywhere—from web apps to machine learning!</h3>
+    </section>
+
+
+
+
+
+
+<button href="installingpython.html">button</button>
+
 </body>
 </html>
