"Updated CSS and HTML files for Python introduction and installation guides, adding new styles, sections, and content."

--- a/learning resources/1_introduction/1_introduction.html
+++ b/learning resources/1_introduction/1_introduction.html
@@ -3,99 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assistant for Coders - Python Introduction</title>
     <link rel="stylesheet" href="1_introduction.css">
-    <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
-    rel="stylesheet"
-/>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
-
-
-
-
-
-
-
-
-
-
 <body>
+    <!-- Header Section -->
     <header class="header">
-        <h1 class="python-intro" > 
-            <button class="start-btn" href="1_introduction.html" > Getting started with python</button>
+        <h1 class="python-intro"> 
+            Getting Started with Python
         </h1>
+        <button class="start-btn">Get Started Now</button>
     </header>
 
-
-
-
-
-
-
-
-
+    <!-- Python Definition Section -->
     <section class="python-def">
-        <h2 class="python-desc">What is python? </h2>
+        <h2 class="python-desc">What is Python?</h2>
         <p class="python-text">
-            Python is a high-level, easy-to-read programming language designed for simplicity and versatility. 
-            <br>
-            Whether you're building websites, analyzing data, or automating tasks, Python's clean syntax and powerful libraries make it perfect for beginners and pros alike.
+            <mark>Python</mark> is a high-level, easy-to-read programming language designed for simplicity and versatility. 
+            Whether you're building <mark>websites</mark>, analyzing data, or automating tasks, Python's clean syntax and powerful libraries make it perfect for both beginners and professionals.
         </p>
     </section>
 
-
-
-
-
-
-
-
-
-
-
-
+    <!-- Video Section -->
     <section class="video-sec">
-        <iframe class="video-embed" width="560" height="315" src="https://www.youtube.com/embed/XIR20HH8mNY?si=4HYPNaRd-MxOJc6n"
-         title="YouTube video player" frameborder="0" 
-         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-         referrerpolicy="strict-origin-when-cross-origin"  allowfullscreen>
-        </iframe>
+        <div class="video-container">
+            <iframe class="video-embed" src="https://www.youtube.com/embed/XIR20HH8mNY?si=4HYPNaRd-MxOJc6n"
+             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+            </iframe>
+        </div>
     </section>
 
-
-
-
-
-
-
-
-
-
+    <!-- History of Python Section -->
     <section class="history-sec">
-        <h2 class="history-title">
-            History of Python:
-        </h2>
+        <h2 class="history-title">History of Python</h2>
         <p class="history-text">
-            <span class="year-91">1991: </span><i>Created by Guido van Rossum, Python was born to make coding fun and easy.</i>
-            <br>
-            <span class="year-00">2000: </span><i>Python 2.0 added features like list comprehensions and improved memory management.</i>
-            <br>
-            <span class="year-08">2008: </span> <i>Python 3.0 arrived, fixing inconsistencies and becoming the go-to version, while Python 2 retired in 2020.</i>
+            <span class="year-91">1991:</span> <i>Created by Guido van Rossum, Python was born to make coding fun and easy.</i><br>
+            <span class="year-00">2000:</span> <i>Python 2.0 added features like list comprehensions and improved memory management.</i><br>
+            <span class="year-08">2008:</span> <i>Python 3.0 arrived, fixing inconsistencies and becoming the go-to version. Python 2 retired in 2020.</i>
         </p>
     </section>
 
-
-
-
-
-
-
+    <!-- Usage Section -->
     <section class="usage-sec">
         <h1 class="usage-title">Where is Python Used?</h1>
         <ol class="usage-list">
-            <li class="usage-item">Web Development (Django, Flask)</li>
-            <li class="usage-item">Data Science & AI (Pandas, TensorFlow)</li>
+            <li class="usage-item"><mark>Web Development</mark> (Django, Flask)</li>
+            <li class="usage-item"><mark>Data Science & AI</mark> (Pandas, TensorFlow)</li>
             <li class="usage-item">Automation/Scripting (Automate tasks, web scraping)</li>
             <li class="usage-item">Game Development (Pygame)</li>
             <li class="usage-item">Desktop Apps (Tkinter, PyQt)</li>
@@ -104,12 +58,17 @@
         <h3 class="usage-subtitle">Python is everywhere—from web apps to machine learning!</h3>
     </section>
 
+    <!-- Next Lecture Note -->
+    <section class="next-lecture-sec">
+        <p class="next-lecture-text">
+            In the next lecture, we will learn how to install Python and set up its environment.
+        </p>
+    </section>
 
-
-
-
-
-<button href="installingpython.html">button</button>
-
+    <!-- Navigation Buttons -->
+    <section class="navigation-sec">
+        <a class="prev-btn" href="1_introduction.html">Previous</a>
+        <a class="next-btn" href="installingpython.html">Next</a>
+    </section>
 </body>
 </html>
