--- a/learning resources/1_introduction/1_introduction.html
+++ b/learning resources/1_introduction/1_introduction.html
@@ -13,7 +13,7 @@
         <h1 class="python-intro"> 
             Getting Started with Python
         </h1>
-        <button class="start-btn">Get Started Now</button>
+        <button class="start-btn" href="1_introduction.html">Get Started Now</button>
     </header>
 
     <!-- Python Definition Section -->
