--- a/learning resources/1_introduction/1_introduction.html
+++ b/learning resources/1_introduction/1_introduction.html
@@ -21,7 +21,8 @@
         <h2 class="python-desc">What is Python?</h2>
         <p class="python-text">
             <mark>Python</mark> is a high-level, easy-to-read programming language designed for simplicity and versatility. 
-            Whether you're building <mark>websites</mark>, analyzing data, or automating tasks, Python's clean syntax and powerful libraries make it perfect for both beginners and professionals.
+            Whether you're building 
+            <mark>websites</mark>, analyzing data, or automating tasks, Python's clean syntax and powerful libraries make it perfect for both beginners and professionals.
         </p>
     </section>
 
@@ -68,7 +69,7 @@
     <!-- Navigation Buttons -->
     <section class="navigation-sec">
         <a class="prev-btn" href="1_introduction.html">Previous</a>
-        <a class="next-btn" href="installingpython.html">Next</a>
+        <a class="next-btn" href="2_installingpython.html">Next</a>
     </section>
 </body>
 </html>
